--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -1,19 +1,96 @@
-apiVersion : apps/v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: akscontososhipssample 
+  name: ship-manager-backend
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: akscontososhipssample
+      app: ship-manager-backend
   template:
     metadata:
       labels:
-        app: akscontososhipssample 
+        app: ship-manager-backend
     spec:
       containers:
-        - name: akscontososhipssample 
-          image: demoday.azurecr.io/akscontososhipssample
+        - image: demoday.azurecr.io/akscontososhipssample
+          name: ship-manager-backend
+          resources:
+            requests:
+              cpu: 100m
+              memory: 128Mi
+            limits:
+              cpu: 250m
+              memory: 256Mi
           ports:
-          - containerPort: 3000
+            - containerPort: 3000
+              name: http
+          env:
+            - name: DATABASE_MONGODB_URI
+              valueFrom:
+                secretKeyRef:
+                  key: database_mongodb_uri
+                  name: backend-db
+            - name: DATABASE_MONGODB_DBNAME
+              value: ship_manager
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: ship-manager-backend
+spec:
+  selector:
+    app: ship-manager-backend
+  ports:
+    - name: http
+      port: 80
+      targetPort: 3000
+---
+apiVersion: networking.k8s.io/v1beta1
+kind: Ingress
+metadata:
+  name: ship-manager-backend
+  annotations:
+    kubernetes.io/ingress.class: addon-http-application-routing
+spec:
+  rules:
+    - host: ship-manager-backend.5da3fbaff23b4572b4b5.eastus.aksapp.io
+      http:
+        paths:
+          - path: /
+            backend:
+              serviceName: ship-manager-backend
+              servicePort: http
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: backend-db
+type: Opaque
+stringData:
+  database_mongodb_uri: mongodb://demodbaks:O7Ie5CFISfocw8MDo5oxsMIhcOsDADi4HiWsYxc7G0udIUdLCLuUzpfTzYL4xnBCcWJ9mSUT0SMhNUSut9qqUw==@demodbaks.mongo.cosmos.azure.com:10255/?ssl=true&replicaSet=globaldb&retrywrites=false&maxIdleTimeMS=120000&appName=@demodbaks@
+---
+apiVersion: autoscaling/v2beta2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: ship-manager-backend
+spec:
+  maxReplicas: 8
+  minReplicas: 1
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: ship-manager-backend
+  metrics:
+    - type: Resource
+      resource:
+        name: cpu
+        target:
+          type: Utilization
+          averageUtilization: 20
+    - type: Resource
+      resource:
+        name: memory
+        target:
+          type: Utilization
+          averageUtilization: 35
