--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -39,6 +39,7 @@ kind: Service
 metadata:
   name: ship-manager-backend
 spec:
+  type: LoadBalancer
   selector:
     app: ship-manager-backend
   ports:
