--- a/manifests/service-backend.yml
+++ b/manifests/service-backend.yml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: ship-manager-backend
 spec:
-  type: LoadBalancer
+  #type: LoadBalancer
   selector:
     app: ship-manager-backend
   ports:
