--- a/manifests/deployment-backend.yml
+++ b/manifests/deployment-backend.yml
@@ -34,18 +34,18 @@ spec:
             - name: DATABASE_MONGODB_DBNAME
               value: ship_manager
 ---
-apiVersion: v1
-kind: Service
-metadata:
-  name: ship-manager-backend
-spec:
-  # type: LoadBalancer
-  selector:
-    app: ship-manager-backend
-  ports:
-    - name: http
-      port: 80
-      targetPort: 3000
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: ship-manager-backend
+# spec:
+#   type: LoadBalancer
+#   selector:
+#     app: ship-manager-backend
+#   ports:
+#     - name: http
+#       port: 80
+#       targetPort: 3000
 ---
 # apiVersion: networking.k8s.io/v1beta1
 # kind: Ingress
