--- a/manifests/service-frontend.yml
+++ b/manifests/service-frontend.yml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: contoso-ship-manager-frontend
 spec:
-  #type: LoadBalancer
+  type: LoadBalancer
   selector:
     app: contoso-ship-manager-frontend
   ports:
