--- a/manifests/deployment-frontend.yml
+++ b/manifests/deployment-frontend.yml
@@ -71,7 +71,7 @@ data:
   config.js: |
     const config = (() => {
       return {
-        'VUE_APP_BACKEND_BASE_URL': 'http://ship-manager-backend',
+        'VUE_APP_BACKEND_BASE_URL': 'http://ship-manager-backend.default.svc.cluster.local',
       }
     })()
 ---
