--- a/manifests/service-backend.yml
+++ b/manifests/service-backend.yml
@@ -2,10 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ship-manager-backend
+  annotations:
+        service.beta.kubernetes.io/azure-load-balancer-internal: "true"
 spec:
-  #type: LoadBalancer
-  type: ExternalName
-  externalName: ship-manager-backend.default.svc.cluster.local
+  type: LoadBalancer
+  
   selector:
     app: ship-manager-backend
   ports:
