--- a/manifests/service-backend.yml
+++ b/manifests/service-backend.yml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ship-manager-backend
-  annotations:
-        service.beta.kubernetes.io/azure-load-balancer-internal: "true"
+  #annotations:
+  #      service.beta.kubernetes.io/azure-load-balancer-internal: "true"
 spec:
   type: LoadBalancer
   
