--- a/manifests/deployment-frontend.yml
+++ b/manifests/deployment-frontend.yml
@@ -71,7 +71,7 @@ data:
   config.js: |
     const config = (() => {
       return {
-        'VUE_APP_BACKEND_BASE_URL': 'http://52.146.65.91',
+        'VUE_APP_BACKEND_BASE_URL': 'http://ship-manager-backend:3000',
       }
     })()
 ---
