--- a/manifests/service-backend.yml
+++ b/manifests/service-backend.yml
@@ -5,7 +5,7 @@ metadata:
   #annotations:
   #      service.beta.kubernetes.io/azure-load-balancer-internal: "true"
 spec:
-  #type: LoadBalancer
+  type: LoadBalancer
   
   selector:
     app: ship-manager-backend
